Added overlay in particle containers

--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="particle-container-1">
+    <div class="particle-container">
         <canvas class="canvas-1">
         
         </canvas>
+        <div class="particle-overlay"></div>
+
     </div>
-    <div class="particle-container-1">
+    <div class="particle-container">
         <canvas class="canvas-2">
     
         </canvas>
+        <div class="particle-overlay"></div>
     </div>
 
     <script src="particles.min.js"></script>
