Added caption in overlay

--- a/index.html
+++ b/index.html
@@ -13,14 +13,24 @@
         <canvas class="canvas-1">
         
         </canvas>
-        <div class="particle-overlay"></div>
+        <div class="particle-overlay">
+            <div class="caption">
+                <h1>Caption Here</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error fugit ducimus labore, sapiente libero deleniti nulla nobis placeat accusamus impedit.</p>
+            </div>
+        </div>
 
     </div>
     <div class="particle-container">
         <canvas class="canvas-2">
     
         </canvas>
-        <div class="particle-overlay"></div>
+        <div class="particle-overlay">
+            <div class="caption">
+                <h1>Caption Here</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis corrupti tempora, et molestias est saepe rem ratione nam accusamus nisi?</p>
+            </div>
+        </div>
     </div>
 
     <script src="particles.min.js"></script>
